:art: : Styling for the main element for centering.
Style to center the entire form on the screen.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,36 @@
-@import "./destyle.min.scss"
+@import "./destyle.min.scss";
+
+main {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+
+}
+
+.title {
+
+}
+
+.form-area {
+
+}
+
+.form-group {
+
+}
+
+.form-label {
+
+}
+
+.form-input {
+
+}
+
+.form-btn {
+
+}
