--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,23 +8,22 @@ main {
 }
 
 .card {
-
+  width: 400px;
+  padding: 20px;
+  border-radius: 3px;
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
 }
 
 .title {
-
 }
 
 .form-area {
-
 }
 
 .form-group {
-
 }
 
 .form-label {
-
 }
 
 .form-input {
