:art: : Styling submit button
To create a good-looking button

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,5 +41,11 @@ main {
 }
 
 .form-btn {
-
+  color: #fff;
+  font-size: 0.95rem;
+  font-weight: bold;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  background-color: cornflowerblue;
 }
